Resolves: fdo#59131 resolve default backend on printer->setup

For setting permanent defaults via spadmin we don't want to resolve the
default backend on saving "default", this happens during the print
initialization stuff.

But when we tweak the printer settings for a single print job and reset back to
default, we need to resolve that to what backend we want

Change-Id: Iac2370624b6d248c9658fb0fbc2f2d449849d81a
(cherry picked from commit 9c4d77f22d58f5b500c95f65a431628a8d8d6e6e)
Reviewed-on: https://gerrit.libreoffice.org/1609
Reviewed-by: Miklos Vajna <vmiklos@suse.cz>
Tested-by: Miklos Vajna <vmiklos@suse.cz>