vcl/inc/vcl/jobdata.hxx
@@ -68,7 +68,8 @@ struct VCL_DLLPUBLIC JobData
     void setCollate( bool bCollate );
     bool setPaper( int nWidth, int nHeight ); // dimensions in pt
     bool setPaperBin( int nPaperBin ); // dimensions in pt
-    void setDefaultBackend( bool bUsePDF );
+    void resolveDefaultBackend();
+    void setDefaultBackend(bool bUsePDF);
 
     // creates a new buffer using new
     // it is up to the user to delete it again
