vcl/unx/generic/printer/jobdata.cxx
@@ -18,9 +18,9 @@
  */
 
 
+#include <officecfg/Office/Common.hxx>
 #include "vcl/jobdata.hxx"
 #include "vcl/printerinfomanager.hxx"
-
 #include "tools/stream.hxx"
 
 #include <sal/alloca.h>
@@ -267,6 +267,12 @@ bool JobData::constructFromStreamBuffer( void* pData, int bytes, JobData& rJobDa
     }
 
     return bVersion && bPrinter && bOrientation && bCopies && bContext && bMargin && bPSLevel && bPDFDevice && bColorDevice && bColorDepth;
+}
+
+void JobData::resolveDefaultBackend()
+{
+    if (m_nPSLevel == 0 && m_nPDFDevice == 0)
+        setDefaultBackend(officecfg::Office::Common::Print::Option::Printer::PDFAsStandardPrintJobFormat::get());
 }
 
 void JobData::setDefaultBackend(bool bUsePDF)
